# claude-context

./: .gitignore  README.md  pyproject.toml
cloudformation/: dynamodb.yaml
src/claude_context/: __init__.py  wsgi.py
src/claude_context/capture/: aggregator.py  buffer.py  extractor.py  observation.py
src/claude_context/cli/: commands.py
src/claude_context/generation/: formatter.py  transformer.py
src/claude_context/middleware/: asgi.py  lambda_handler.py  wsgi.py
src/claude_context/otel/: __init__.py  span_processor.py
src/claude_context/storage/: dynamo.py
tests/: conftest.py  test_aggregator.py  test_cli.py  test_dynamo.py  test_extractor.py  test_formatter.py  test_middleware_asgi.py  test_middleware_wsgi.py  test_otel_span_processor.py
